--- a/CPS-Slaver/CPS-Slaver.ioc
+++ b/CPS-Slaver/CPS-Slaver.ioc
@@ -39,7 +39,7 @@ Dma.USART2_RX.1.Priority=DMA_PRIORITY_LOW
 Dma.USART2_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,configTOTAL_HEAP_SIZE,configUSE_IDLE_HOOK,configUSE_TICK_HOOK,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default
+FREERTOS.Tasks01=defaultTask,0,512,System_CLI_Handle,As weak
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=1
 FREERTOS.configTOTAL_HEAP_SIZE=13072
 FREERTOS.configUSE_IDLE_HOOK=1
